preventing overflow:hidden for un-expanded amp-ads

--- a/css/amp.css
+++ b/css/amp.css
@@ -151,6 +151,12 @@ html.i-amphtml-ios-embed {
   overflow: hidden !important;
 }
 
+.i-amphtml-layout-awaiting-size {
+  position: absolute !important;
+  top: auto !important;
+  bottom: auto !important;
+}
+
 i-amphtml-sizer {
   display: block !important;
 }
